added ui and appData

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,10 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".AppWiseSettingActivity"></activity>
+        <activity
+            android:name=".AppWiseSettingActivity"
+            android:theme="@style/Theme.Transparent">
+        </activity>
     </application>
 
 </manifest>
