--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        
-
+        classpath 'com.android.tools.build:gradle:8.7.3'
+//        implementation platform('com.google.firebase:firebase-bom:33.7.0')
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.google.gms:google-services:3.1.0'
+        classpath 'com.google.gms:google-services:4.4.2'
     }
 }
 
@@ -20,6 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url "https://jitpack.io" } // Add JitPack
     }
 }
 
