--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,9 +8,9 @@ android {
     defaultConfig {
         applicationId "com.rstack.dephone"
         minSdkVersion 23
-        targetSdkVersion 33
-        versionCode 5
-        versionName "2.0"
+        targetSdkVersion 34
+        versionCode 6
+        versionName "3.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:23.1.0'
     implementation 'com.google.firebase:firebase-database:21.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.play:integrity:1.4.0'
     //compile 'com.android.support:appcompat-v7:26.1.0'
     implementation("androidx.cardview:cardview:1.0.0")
     implementation("androidx.recyclerview:recyclerview:1.3.2")
